--- a/styles.css
+++ b/styles.css
@@ -49,9 +49,10 @@ a{
 
 #aresults {
   grid-column: 1/11;
-  grid-row: 1/9;
+  grid-row: 2/10;
   /*width: 550px;
   height: 500px;*/
+  line-height: 12px;
   white-space: pre-line; /* /n retour a la ligne */
   text-align: center; /*remplace valeur de la class*/
   padding: 10;
@@ -63,15 +64,15 @@ a{
 }
 
 #ainput {
-  grid-column: 1/6;
-  grid-row: 10;
+  grid-column: 6/11;
+  grid-row: 1;
   background-color: rgb(255,255,255);/*remplace valeur de la class*/
   vertical-align:middle;
   line-height: 50px; /* pour que vertical-align fonctionne */
 }
 #ainfo {
-  grid-column: 6/11;
-  grid-row: 10;
+  grid-column: 1/6;
+  grid-row: 1;
   text-align: center; /*remplace valeur de la class*/
   background-color: rgb(255,255,255);/*remplace valeur de la class*/
   font-size: 16px;/*remplace valeur de la class*/
@@ -83,7 +84,7 @@ a{
 /*zone des bouttons*/
 button{
   /* concerne tous les boutons*/
-  font-size: 16px;  /* min 16 pour eviter zoom auto sur IPhone*/
+  font-size: 12px;  /* min 16 pour eviter zoom auto sur IPhone*/
   font-weight: bold;
   justify-content: center;
   height: 50px;
@@ -110,33 +111,33 @@ button{
 
 
 
-#b7{grid-column: 1;grid-row: 11;}
-#b8{grid-column: 2;grid-row: 11;}
-#b9{grid-column: 3;grid-row: 11;}
-#bc{grid-column: 4;grid-row: 11;color: rgb(255,100,100); /*remplace la class*/}
-#bcstk{grid-column: 5;grid-row: 11;color: rgb(255,200,200); /*remplace la valeur class*/}
-#bswap{grid-column: 6;grid-row: 11}
-#bplus{grid-column: 7/9;grid-row: 11;}
 
-#b4{grid-column: 1;grid-row: 12;}
-#b5{grid-column: 2;grid-row: 12;}
-#b6{grid-column: 3;grid-row: 12;}
-#bac{grid-column: 4;grid-row: 12;color: rgb(255,100,100); /*remplace la valeur class*/}
-#bdup{grid-column: 6;grid-row: 12;}
-#bsto{grid-column: 5;grid-row: 12;}
-#bminu{grid-column: 7/9;grid-row: 12;}
+#b8{grid-column: 2;grid-row: 10;}
 
-#b1{grid-column: 1;grid-row: 13;}
-#b2{grid-column: 2;grid-row: 13;}
-#b3{grid-column: 3;grid-row: 13;}
-#bmoins{grid-column: 4;grid-row: 13;)}
-#bdrop{grid-column: 6;grid-row: 13;}
-#brcl{grid-column: 5;grid-row: 13;}
-#bmul{grid-column: 7/9;grid-row: 13;}
+#bc{grid-column: 4;grid-row: 10;color: rgb(255,100,100); /*remplace la class*/}
+#bcstk{grid-column: 5;grid-row: 10;color: rgb(255,200,200); /*remplace la valeur class*/}
+#bswap{grid-column: 6;grid-row: 10}
+#bplus{grid-column: 9/11;grid-row: 10;}
 
-#b0{grid-column: 1;grid-row: 14;}
-#bpoint{grid-column: 2;grid-row: 14;}
-#be{grid-column: 3;grid-row: 14;}
-#benter{grid-column: 4/6;grid-row: 14;}
-#bpi{grid-column: 6;grid-row: 14;}
-#bdiv{grid-column: 7/9;grid-row: 14;}
+#b4{grid-column: 1;grid-row: 11;}
+#b5{grid-column: 2;grid-row: 11;}
+#b6{grid-column: 3;grid-row: 11;}
+#bac{grid-column: 4;grid-row: 11;color: rgb(255,100,100); /*remplace la valeur class*/}
+#bdup{grid-column: 6;grid-row: 11;}
+#bsto{grid-column: 5;grid-row: 11;}
+#bminu{grid-column: 9/11;grid-row: 11;}
+
+
+#b2{grid-column: 2;grid-row: 12;}
+
+#bmoins{grid-column: 4;grid-row: 12;)}
+#bdrop{grid-column: 6;grid-row: 12;}
+#brcl{grid-column: 5;grid-row: 12;}
+#bmul{grid-column: 9/11;grid-row: 12;}
+
+#b0{grid-column: 1;grid-row: 13;}
+#bpoint{grid-column: 2;grid-row: 13;}
+#be{grid-column: 3;grid-row: 13;}
+#benter{grid-column: 4/6;grid-row: 13;}
+#bpi{grid-column: 6;grid-row: 13;}
+#bdiv{grid-column: 9/11;grid-row: 13;}
