--- a/styles06.css
+++ b/styles06.css
@@ -66,9 +66,12 @@ a{
 #ainput {
   grid-column: 6/11;
   grid-row: 1;
+  white-space: pre-line; /* /n retour a la ligne */
   background-color: rgb(255,255,255);/*remplace valeur de la class*/
-  vertical-align:middle;
-  line-height: 50px; /* pour que vertical-align fonctionne */
+  vertical-align:top;
+  line-height: 25px; /* pour que vertical-align fonctionne */
+  text-align: center; /*remplace valeur de la class*/
+  font-size: 12px;
 }
 #ainfo {
   grid-column: 6/11;
@@ -129,14 +132,17 @@ button{
 
 #bnord{grid-column: 2;grid-row: 10;}
 #bouest{grid-column:1;grid-row: 11;}
-
+/*
 #brot{grid-column:2;grid-row: 11;}
+*/
 #best{grid-column:3;grid-row: 11;}
 #bsud{grid-column:2;grid-row: 12;}
 
-#bana{grid-column:4;grid-row: 10;}
-#binit{grid-column:4;grid-row: 11;}
+
+#bvitmoins{grid-column:4;grid-row: 10;}
+#bvitplus{grid-column:5;grid-row: 10;}
+#bclear{grid-column:3;grid-row: 10;}
 #benter{grid-column:3/5;grid-row: 12;}
-#bmove{grid-column:5;grid-row: 10;}
+#bmove{grid-column:4;grid-row: 11;}
 #bgo{grid-column:5;grid-row: 11;}
 #bstop{grid-column:5;grid-row: 12;}
